--- a/bootstrap/node-config/node-config.yaml
+++ b/bootstrap/node-config/node-config.yaml
@@ -11,7 +11,7 @@ spec:
   source:
     path: bootstrap/node-config/groups/dev
     repoURL: https://github.com/dialvare/ai-lifecycle-edge.git
-    targetRevision: HEAD
+    targetRevision: sno
   sources: []
   project: default
   syncPolicy:
